@@ -1,4 +1,6 @@
 2014-08-19  Sebastian Mendel  <sebastian.mendel@netresearch.de>
 
+	* TYPO-2741: ensure newly generated session id is not in use already
+
 	* TYPO-2741: outsource session handling into own extension nr_session
 
